--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="contact">
-            <h2>Contact Information</h2>
+            <h2>Contact Information*</h2>
             <p>Email: <a href="zgillani73@gmail.com">contact@zayn.com</a></p>
             <p>Follow us on <a href="https://www.facebook.com/profile.php?id=100067550236103&mibextid=LQQJ4d" target="_blank">Facebook</a></p>
         </section>
